--- a/index.html
+++ b/index.html
@@ -4,107 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escáner de Código de Barras</title>
-    <script src="https://unpkg.com/quagga"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
+    <style>
+        /* Estilos para el modal */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .modal-content {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            position: relative;
+        }
+        .close-btn {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            font-size: 20px;
+            cursor: pointer;
+        }
+        #reader {
+            width: 100%;
+            max-width: 400px;
+        }
+    </style>
 </head>
 <body>
+
     <h2>Escáner de Código de Barras</h2>
 
-    <!-- QuaggaJS -->
-    <input type="text" id="barcodeInputQuagga" placeholder="Código QuaggaJS" readonly>
-    <button onclick="startScannerQuagga()">Escanear con QuaggaJS</button>
-    <video id="scannerQuagga" style="width: 100%; max-width: 400px; display: none;"></video>
+    <!-- Campo de entrada editable -->
+    <input type="text" id="barcodeInput" placeholder="Código escaneado" autocomplete="off">
+    <button onclick="openScanner()">Escanear Código</button>
 
-    <!-- ZXing (jsQR) -->
-    <input type="text" id="barcodeInputZXing" placeholder="Código ZXing" readonly>
-    <button onclick="startScannerZXing()">Escanear con ZXing (jsQR)</button>
-    <video id="scannerZXing" style="width: 100%; max-width: 400px; display: none;"></video>
-
-    <!-- Html5QrcodeScanner -->
-    <input type="text" id="barcodeInputHtml5" placeholder="Código Html5Qrcode" readonly>
-    <button onclick="startScannerHtml5()">Escanear con Html5Qrcode</button>
-    <div id="reader" style="width: 100%; max-width: 400px;"></div>
-
-    <!-- BarcodeDetector API (Nativo) -->
-    <input type="text" id="barcodeInputNative" placeholder="Código API Nativa" readonly>
-    <button onclick="startScannerNative()">Escanear con BarcodeDetector</button>
-    <video id="scannerNative" autoplay playsinline style="width: 100%; max-width: 400px; display: none;"></video>
+    <!-- Modal con el escáner -->
+    <div id="scannerModal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn" onclick="closeScanner()">&times;</span>
+            <h3>Escaneando...</h3>
+            <div id="reader"></div>
+        </div>
+    </div>
 
     <script>
-        // 1. Escáner con QuaggaJS
-        function startScannerQuagga() {
-            let inputField = document.getElementById("barcodeInputQuagga");
-            let videoElement = document.getElementById("scannerQuagga");
+        let scanner;
 
-            Quagga.init({
-                inputStream: {
-                    name: "Live",
-                    type: "LiveStream",
-                    target: videoElement,
-                    constraints: { facingMode: "environment" }
-                },
-                decoder: { readers: ["code_128_reader", "ean_reader", "ean_8_reader", "upc_reader"] }
-            }, function (err) {
-                if (err) { console.error("Error:", err); return; }
-                Quagga.start();
-                videoElement.style.display = "block";
-            });
+        // Función para abrir el escáner
+        function openScanner() {
+            document.getElementById("scannerModal").style.display = "flex";
 
-            Quagga.onDetected(function (result) {
-                inputField.value = result.codeResult.code;
-                Quagga.stop();
-                videoElement.style.display = "none";
-            });
-        }
-
-        // 2. Escáner con ZXing (jsQR)
-        function startScannerZXing() {
-            let inputField = document.getElementById("barcodeInputZXing");
-            let video = document.createElement("video");
-
-            navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
-                .then(stream => {
-                    video.srcObject = stream;
-                    video.setAttribute("playsinline", true);
-                    video.play();
-                    scanZXing(video, inputField, stream);
-                });
-        }
-
-        function scanZXing(video, inputField, stream) {
-            let canvas = document.createElement("canvas");
-            let ctx = canvas.getContext("2d");
-
-            function tick() {
-                if (video.readyState === video.HAVE_ENOUGH_DATA) {
-                    canvas.width = video.videoWidth;
-                    canvas.height = video.videoHeight;
-                    ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-                    let imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-                    let code = jsQR(imageData.data, imageData.width, imageData.height);
-                    if (code) {
-                        inputField.value = code.data;
-                        stream.getTracks().forEach(track => track.stop());
-                    } else {
-                        requestAnimationFrame(tick);
-                    }
-                }
-            }
-            tick();
-        }
-
-        // 3. Escáner con Html5QrcodeScanner
-        function startScannerHtml5() {
-            let inputField = document.getElementById("barcodeInputHtml5");
-            let scanner = new Html5Qrcode("reader");
-
+            scanner = new Html5Qrcode("reader");
             scanner.start(
-                { facingMode: "environment" },
+                { facingMode: "environment" }, // Usa la cámara trasera
                 { fps: 10, qrbox: 250 },
                 (decodedText) => {
-                    inputField.value = decodedText;
-                    scanner.stop();
+                    document.getElementById("barcodeInput").value = decodedText;
+                    closeScanner(); // Cierra la ventana al escanear
                 },
                 (errorMessage) => {
                     console.log("Error:", errorMessage);
@@ -112,38 +78,15 @@
             );
         }
 
-        // 4. Escáner con BarcodeDetector API Nativa
-        async function startScannerNative() {
-            if (!("BarcodeDetector" in window)) {
-                alert("BarcodeDetector API no soportada en este navegador.");
-                return;
+        // Función para cerrar el escáner
+        function closeScanner() {
+            if (scanner) {
+                scanner.stop().then(() => {
+                    document.getElementById("scannerModal").style.display = "none";
+                }).catch(err => console.log("Error al detener el escáner:", err));
             }
-
-            let inputField = document.getElementById("barcodeInputNative");
-            let video = document.getElementById("scannerNative");
-            video.style.display = "block";
-
-            let stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } });
-            video.srcObject = stream;
-
-            const barcodeDetector = new BarcodeDetector({ formats: ["code_128", "ean_13", "qr_code"] });
-
-            function detectBarcode() {
-                barcodeDetector.detect(video)
-                    .then(barcodes => {
-                        if (barcodes.length > 0) {
-                            inputField.value = barcodes[0].rawValue;
-                            stream.getTracks().forEach(track => track.stop());
-                            video.style.display = "none";
-                        } else {
-                            requestAnimationFrame(detectBarcode);
-                        }
-                    })
-                    .catch(err => console.error("Error detectando código:", err));
-            }
-
-            video.onloadedmetadata = () => detectBarcode();
         }
     </script>
+
 </body>
 </html>
