--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.7);
-            display: flex;
             align-items: center;
             justify-content: center;
         }
@@ -46,12 +45,12 @@
 
     <!-- Campo de entrada editable -->
     <input type="text" id="barcodeInput" placeholder="Código escaneado" autocomplete="off">
-    <button onclick="openScanner()">Escanear Código</button>
+    <button id="scanButton">Escanear Código</button>
 
     <!-- Modal con el escáner -->
     <div id="scannerModal" class="modal">
         <div class="modal-content">
-            <span class="close-btn" onclick="closeScanner()">&times;</span>
+            <span class="close-btn" id="closeButton">&times;</span>
             <h3>Escaneando...</h3>
             <div id="reader"></div>
         </div>
@@ -59,6 +58,9 @@
 
     <script>
         let scanner;
+
+        document.getElementById("scanButton").addEventListener("click", openScanner);
+        document.getElementById("closeButton").addEventListener("click", closeScanner);
 
         // Función para abrir el escáner
         function openScanner() {
@@ -75,7 +77,7 @@
                 (errorMessage) => {
                     console.log("Error:", errorMessage);
                 }
-            );
+            ).catch(err => console.error("Error al iniciar el escáner:", err));
         }
 
         // Función para cerrar el escáner
@@ -84,6 +86,8 @@
                 scanner.stop().then(() => {
                     document.getElementById("scannerModal").style.display = "none";
                 }).catch(err => console.log("Error al detener el escáner:", err));
+            } else {
+                document.getElementById("scannerModal").style.display = "none";
             }
         }
     </script>
