--- a/index.html
+++ b/index.html
@@ -6,36 +6,10 @@
     <title>Escáner de Código de Barras</title>
     <script src="https://unpkg.com/html5-qrcode"></script>
     <style>
-        /* Estilos para el modal */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            align-items: center;
-            justify-content: center;
-        }
-        .modal-content {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            position: relative;
-        }
-        .close-btn {
-            position: absolute;
-            top: 10px;
-            right: 15px;
-            font-size: 20px;
-            cursor: pointer;
-        }
         #reader {
             width: 100%;
             max-width: 400px;
+            display: none;
         }
     </style>
 </head>
@@ -47,24 +21,18 @@
     <input type="text" id="barcodeInput" placeholder="Código escaneado" autocomplete="off">
     <button id="scanButton">Escanear Código</button>
 
-    <!-- Modal con el escáner -->
-    <div id="scannerModal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn" id="closeButton">&times;</span>
-            <h3>Escaneando...</h3>
-            <div id="reader"></div>
-        </div>
-    </div>
+    <!-- Escáner directo -->
+    <div id="reader"></div>
 
     <script>
         let scanner;
 
         document.getElementById("scanButton").addEventListener("click", openScanner);
-        document.getElementById("closeButton").addEventListener("click", closeScanner);
 
         // Función para abrir el escáner
         function openScanner() {
-            document.getElementById("scannerModal").style.display = "flex";
+            let readerElement = document.getElementById("reader");
+            readerElement.style.display = "block"; // Muestra el escáner
 
             scanner = new Html5Qrcode("reader");
             scanner.start(
@@ -72,7 +40,7 @@
                 { fps: 10, qrbox: 250 },
                 (decodedText) => {
                     document.getElementById("barcodeInput").value = decodedText;
-                    closeScanner(); // Cierra la ventana al escanear
+                    closeScanner(); // Cierra el escáner al escanear un código
                 },
                 (errorMessage) => {
                     console.log("Error:", errorMessage);
@@ -84,10 +52,10 @@
         function closeScanner() {
             if (scanner) {
                 scanner.stop().then(() => {
-                    document.getElementById("scannerModal").style.display = "none";
+                    document.getElementById("reader").style.display = "none";
                 }).catch(err => console.log("Error al detener el escáner:", err));
             } else {
-                document.getElementById("scannerModal").style.display = "none";
+                document.getElementById("reader").style.display = "none";
             }
         }
     </script>
